--- a/chart/templates/tf_controller_clusterrole.yml
+++ b/chart/templates/tf_controller_clusterrole.yml
@@ -1,3 +1,5 @@
+# Omit cluster-scoped resources if already present
+{{- if not (lookup "rbac.authorization.k8s.io/v1" "ClusterRole" "" "tf-controller-clusterrole") -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -94,3 +96,4 @@ rules:
       - "create"
       - "update"
       - "delete"
+{{- end }}
