--- a/chart/templates/tf_controller_clusterrolebinding.yml
+++ b/chart/templates/tf_controller_clusterrolebinding.yml
@@ -1,3 +1,5 @@
+# Omit cluster-scoped resources if already present
+{{- if not (lookup "rbac.authorization.k8s.io/v1" "ClusterRoleBinding" "" "tf-controller-clusterrolebinding") -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -10,3 +12,4 @@ subjects:
   - kind: ServiceAccount
     name: tf-controller-service-account
     namespace: {{ .Release.Namespace }}
+{{- end }}
